# facefusion

./: README.md  ULTRA_ROADMAP.md  facefusion.balanced.ini  facefusion.fast.ini  facefusion.high-quality.ini  install.bat  install_modules.bat  pyproject.toml  run.bat
facefusion/: args.py  core.py  doctor.py  download.py  frame_interpolator.py  locales.py  program.py  types.py
facefusion/processors/: batching.py
facefusion/processors/modules/face_enhancer/: core.py
facefusion/processors/modules/face_swapper/: core.py
facefusion/processors/modules/frame_enhancer/: core.py
facefusion/processors/modules/frame_interpolator/: choices.py  core.py  locales.py  types.py
facefusion/processors/modules/lip_syncer/: core.py  types.py
facefusion/processors/modules/portrait_animator/: choices.py  core.py  locales.py  types.py
facefusion/uis/: types.py
facefusion/workflows/: image_to_video.py
tests/: test_batching.py  test_doctor.py  test_download.py  test_face_enhancer_batching.py  test_frame_enhancer_batching.py  test_frame_interpolator.py  test_frame_interpolator_processor.py  test_hf_publish.py  test_interpolate_video.py  test_lip_syncer_scaffold.py  test_portrait_animator.py  test_workflow_interpolate_output.py
tools/: hf_publish.py  interpolate_video.py
